# apmg-openscience

./: .gitignore  README.md
data/: retrieveGeocenter.sh
pub/: .gitignore  Makefile  PubAuthor20XX.tex  references.bib
soft/analysis/: plotfunc.py  pymodule  run_c++program.sh
soft/cpp/mylib/src/: CMakeLists.txt
soft/python/pymodule/: function.py
